--- a/src/app/doces/doces.component.html
+++ b/src/app/doces/doces.component.html
@@ -1,9 +1,6 @@
 <ul class="item-list">
   <li class="item" *ngFor="let doce of doces">
     <span class="bold">{{ doce.codigo }}:</span>
-    <span
-      >{{ doce.nome }} - {{ doce.valor | currency: "BRL":true }} - Quantidade
-      restante: {{ doce.restante }}</span
-    >
+    <span>{{ doce.nome }} - {{ doce.valor | currency: "BRL":true }}</span>
   </li>
 </ul>
