--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-inserir-moeda></app-inserir-moeda>
-<app-doces></app-doces>
-<app-doce-selecionado></app-doce-selecionado>
-<app-comprar-doce></app-comprar-doce>
+<div class="container"> 
+    <app-inserir-moeda style="position: relative;right: -30rem;"></app-inserir-moeda>
+    <app-doces style="position: relative;right: -30.5rem;"></app-doces>
+    <app-doce-selecionado style="position: relative;right: -30.5rem;"></app-doce-selecionado>
+    <app-comprar-doce></app-comprar-doce>
+</div>
