--- a/src/app/comprar-doce/comprar-doce.component.html
+++ b/src/app/comprar-doce/comprar-doce.component.html
@@ -1,3 +1,3 @@
-<button class="button dispense -full-width" (click)="dispenserDoce()">
+<button style="position: relative;right: -30.5rem;margin-top: 1rem;" class="button dispense -full-width" (click)="dispenserDoce()">
   Comprar
 </button>
