--- a/src/app/doces/doces.component.scss
+++ b/src/app/doces/doces.component.scss
@@ -6,7 +6,12 @@
 }
 
 .item-list {
-  padding: 0;
+  text-align: center;
+  margin: 20px auto;
+  font-family:'Courier New', Courier, monospace;
+  color: #4CAF50;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .bold {
