--- a/src/app/inserir-moedas/inserir-moeda.component.scss
+++ b/src/app/inserir-moedas/inserir-moeda.component.scss
@@ -25,7 +25,6 @@ section {
 }
 
 .display.-sm-width {
-  max-width: 208px;
   text-align: center;
   margin-top: 2%;
 }
@@ -60,3 +59,31 @@ section {
   background-color: #DB7093;
 }
 
+.titulo-principal{
+  text-align: center;
+  margin: 20px auto;
+  font-family:'Courier New', Courier, monospace;
+  color: #4CAF50;
+  font-weight: bold;
+  font-size: 20px;
+}
+.titulo-principal:after{
+content: '|';
+margin-left: 5px;
+opacity: 1;
+animation: pisca .7s infinite;
+}
+
+/* Animação aplicada ao content referente a classe *.titulo-principal* resultando num efeito de cursor piscando. */
+
+@keyframes pisca{
+  0%, 100%{
+      opacity: 1;
+  }
+  50%{
+      opacity: 0;
+  }
+}
+.third {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
