fix: atualização do front

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="background-image: url(../assets/doces.jpeg);">
+<div class="container" style="background-image: url(../assets/cyber5.gif);">
   <div class="containerInterno">
     <app-inserir-moeda ></app-inserir-moeda>
     <app-doces></app-doces>
