--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,7 @@
     background-position: center;
 }
 .containerInterno {
+  background-color: aliceblue;
   display: inline-block;
     vertical-align: middle;
     width: 350px;
