--- a/src/app/inserir-moedas/inserir-moeda.component.scss
+++ b/src/app/inserir-moedas/inserir-moeda.component.scss
@@ -29,33 +29,13 @@ section {
   margin-top: 2%;
 }
 
-#yellow {
-  margin: 0 5px;
-  background-color: #FFC0CB;
-}
-
-#yellow:hover{
-  background-color: #DB7093;
-
-}
-
-#blue {
+#button-pink {
   margin: 0 5px;
   background-color: #FFC0CB;
 
 }
 
-#blue:hover {
-  background-color: #DB7093;
-}
-
-#green {
-  margin: 0 5px;
-  background-color: #FFC0CB;
-
-}
-
-#green:hover {
+#button-pink:hover {
   background-color: #DB7093;
 }
 
