--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div class="container" style="background-image: url(../assets/cyber5.gif);">
-  <div class="containerInterno">
-    <app-inserir-moeda ></app-inserir-moeda>
-    <app-doces></app-doces>
-    <app-doce-selecionado></app-doce-selecionado>
-    <app-comprar-doce></app-comprar-doce>
-  </div>
-</div>
+<router-outlet></router-outlet>
