--- a/src/app/inserir-moedas/inserir-moeda.component.scss
+++ b/src/app/inserir-moedas/inserir-moeda.component.scss
@@ -31,39 +31,58 @@ section {
 
 #button-pink {
   margin: 0 5px;
-  background-color: #FFC0CB;
-
+  background-color: #ffc0cb;
 }
 
 #button-pink:hover {
-  background-color: #DB7093;
+  background-color: #db7093;
 }
 
-.titulo-principal{
+.titulo-principal {
   text-align: center;
   margin: 20px auto;
-  font-family:'Courier New', Courier, monospace;
-  color: #4CAF50;
+  font-family: "Courier New", Courier, monospace;
+  color: #4caf50;
   font-weight: bold;
   font-size: 20px;
 }
-.titulo-principal:after{
-content: '|';
-margin-left: 5px;
-opacity: 1;
-animation: pisca .7s infinite;
+.titulo-principal:after {
+  content: "|";
+  margin-left: 5px;
+  opacity: 1;
+  animation: pisca 0.7s infinite;
 }
 
 /* Animação aplicada ao content referente a classe *.titulo-principal* resultando num efeito de cursor piscando. */
 
-@keyframes pisca{
-  0%, 100%{
-      opacity: 1;
+@keyframes pisca {
+  0%,
+  100% {
+    opacity: 1;
   }
-  50%{
-      opacity: 0;
+  50% {
+    opacity: 0;
   }
 }
 .third {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.container {
+  text-align: center;
+  height: 100%;
+  margin: auto;
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background: cover;
+  background-position: center;
+}
+.containerInterno {
+  background-color: aliceblue;
+  display: inline-block;
+  vertical-align: middle;
+  width: 350px;
+  padding: 20px;
+  text-align: center;
+  margin-top: 170px;
 }
