--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,10 @@
-<button [routerLink]="'/doces'">Máquina doce</button>
-<button [routerLink]="'/elevador'">Elevador</button>
+<div class="container " style="background-color: url(../assets/bg-img-7.png)">
+  <div class=" d-flex">
+    <div class="col-6">
+      <button class="btn1 third" [routerLink]="'/doces'">Máquina doce</button>
+    </div>
+    <div class="col-6">
+      <button class="btn2 third" [routerLink]="'/elevador'">Elevador</button>
+    </div>
+  </div>
+</div>
