--- a/src/app/inserir-moedas/inserir-moeda.component.scss
+++ b/src/app/inserir-moedas/inserir-moeda.component.scss
@@ -74,7 +74,7 @@ section {
   margin: 0 auto !important;
   max-width: 100%;
   background-repeat: no-repeat;
-  background: cover;
+  background-size: cover;
   background-position: center;
 }
 .containerInterno {
